--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A SQL and Express App",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "server.js"
   },
   "author": "Ben Harloe",
   "license": "ISC",
